[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Players/player.gd" type="Script" id=1]
[ext_resource path="res://assets/Game/Map/MiniMap/miniRoom.png" type="Texture" id=2]
[ext_resource path="res://scenes/Game/Map/Shadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Players/UI/Player_UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Game/Map/MiniMap.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.5, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 35, 35 )

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="body" type="KinematicBody2D" parent="." groups=["player_body"]]

[node name="Sprite" type="Sprite" parent="body"]
self_modulate = Color( 0.211765, 0.917647, 0.521569, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
visible = false
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="body"]
current = true
smoothing_enabled = true

[node name="door_trigger" type="Area2D" parent="body" groups=["body_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/door_trigger"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="area" type="Area2D" parent="body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/area"]
shape = SubResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="body"]
shape = SubResource( 4 )
shape_centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Shadow" parent="." instance=ExtResource( 3 )]
visible = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Player_UI" parent="HUD" instance=ExtResource( 4 )]

[node name="MiniMap" parent="HUD" instance=ExtResource( 5 )]
visible = false

[connection signal="area_entered" from="body/area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="body/area" to="." method="_on_area_area_exited"]
[connection signal="pressed" from="body/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="body/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
